<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share" />
    <item
        android:id="@+id/action_open_with"
        android:title="@string/action_open_with"
        android:icon="@drawable/ic_open_with" />
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save_to_gallery"
        android:icon="@drawable/ic_save" />
    <item
        android:id="@+id/action_rename"
        android:title="@string/action_rename"
        android:icon="@drawable/ic_rename" />
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details"
        android:icon="@drawable/ic_details" />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete" />
</menu>
